# BGR3D

./: .gitignore  CMakeLists.txt
assets/shaders/: Example_3D.vert  Example_Skybox.vert
dependencies/BGRCore/include/: Camera.h
install/include/: Mesh.h  Skybox.h
install/include/assets/shaders/: Example_3D.frag
src/: Camera3D.cpp  Camera3D.h  Material.cpp  Material.h  Mesh.cpp  Skybox.cpp
